# python-eventsourcing-fastapi-sample

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/api/: deps.py  main.py
app/api/endpoints/: documents.py  effective.py
app/api/routes/: main.py
app/core/: services.py
app/module/pubsubdoc/application/query/document/: document_projection.py  document_query_service.py
app/module/pubsubdoc/application/services/: doc_service.py  effective_service.py
app/module/pubsubdoc/domain/models/: doc.py  effective.py
app/module/pubsubdoc/infrastructure/doc/: crud.py  models.py  schema.py
app/schemas/: docs.py  effective.py
db/: sqlite.db
